# librarian

./: .gitignore  README.md  db-export.sh  db-import.sh  docker-compose.yml
api/: Cargo.toml
api/docs/: api-website-interaction.md  api_reference.md
api/meta/: Cargo.toml  requests.rs  saved.json
api/meta/src/: main.rs  requests.rs  saved.json
api/src/: main.rs
api/src/api/: get.rs  mod.rs  post.rs  requests.rs
api/src/state/: mod.rs
app/: .gitignore  Dockerfile
app/config/: web.php
app/web/: index.php  index1.php
app/web/css/: for_all.css  reset.css
app/web/css/carusel/: big_slider.css  little_slider.css
app/web/css/footer/: footer.css
app/web/css/header/: header.css
app/web/css/pages/: add_work.css  cabinet.css  catalog.css  index.css  sign_in.css  sign_up.css  work_info.css
app/web/php/function/: ConnectionDB.php  FileStorage.php
app/web/php/schemas/: meta.php
app/web/php/template/elements/: el_footer.php  el_header.php
app/web/php/template/elements/covers/: one_book.php  one_category.php  session_end.php
app/web/php/template/elements/main/: footer.php  header.php
app/web/php/template/elements/sliders/: big_slider.php  little_slider.php
app/web/php/template/pages/reccurring/: cabinet.php  work_info.php
app/web/php/template/pages/unique/: add_work.php  catalog.php  sign_in.php  sign_up.php
app/web/scripts/carusel/: big_slider.js  little_slider.js
app/web/scripts/header/: search_animation.js
app/web/scripts/pages/: cabinet_changh_vkladku.js
db/: Dockerfile  README.md  dev_database.sql  dev_database_init.sql
